--- a/MissionPlanner.csproj
+++ b/MissionPlanner.csproj
@@ -100,6 +100,7 @@
     <Reference Include="System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="Updater, Version=1.0.7056.19890, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>Updater\bin\Release\Updater.exe</HintPath>
@@ -335,6 +336,9 @@
     <PackageReference Include="JetBrains.Profiler.SelfApi">
       <Version>2.0.2</Version>
     </PackageReference>
+    <PackageReference Include="kayChart.dll">
+      <Version>0.4.7</Version>
+    </PackageReference>
     <PackageReference Include="log4net" version="2.0.8" targetFramework="net462" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
       <Version>3.6.0</Version>
@@ -373,6 +377,12 @@
       <Version>4.5.0</Version>
     </PackageReference>
     <PackageReference Include="Unofficial.ObjectListView" version="2.6.0" targetFramework="net40" />
+    <PackageReference Include="VisioForge.DotNet.Core.Redist.Base.x64">
+      <Version>12.1.24</Version>
+    </PackageReference>
+    <PackageReference Include="VisioForge.DotNet.VideoCapture.TRIAL">
+      <Version>12.0.82</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms">
       <Version>4.8.0.1560</Version>
     </PackageReference>
@@ -1130,7 +1140,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Joystick\JoystickSetup.cs">
-      <SubType>Form</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Joystick\Joy_Button_axis.cs">
       <SubType>Form</SubType>
